k3s/manifests/pegaprox/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pegaprox
  namespace: pegaprox
spec:
  type: ClusterIP
  selector:
    app: pegaprox
  ports:
    - name: http
      port: 5000
      targetPort: 5000
    - name: vnc-ws
      port: 5001
      targetPort: 5001
    - name: ssh-ws
      port: 5002
      targetPort: 5002
